; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_dir_entry_new.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_dir_entry_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dir_entry = type { i32 }

@name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.dir_entry* (i8*, i32)* @dir_entry_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.dir_entry* @dir_entry_new(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.dir_entry*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.dir_entry*, %struct.dir_entry** %5, align 8
  %7 = load i32, i32* @name, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @FLEX_ALLOC_MEM(%struct.dir_entry* %6, i32 %7, i8* %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.dir_entry*, %struct.dir_entry** %5, align 8
  %13 = getelementptr inbounds %struct.dir_entry, %struct.dir_entry* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.dir_entry*, %struct.dir_entry** %5, align 8
  ret %struct.dir_entry* %14
}

declare dso_local i32 @FLEX_ALLOC_MEM(%struct.dir_entry*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
